@@ -580,7 +580,12 @@ class BikaListingView(BrowserView):
 
         self.contentFilter['sort_order'] = self.sort_order
         if self.sort_on:
-            self.contentFilter['sort_on'] = self.sort_on
+            # Ensure we have a valid sort_on index is valid
+            if self.sort_on not in catalog.indexes():
+                logger.warn("Sort index 'sort_on={}' is not in available indexes for the requested catalog '{}'.".format(
+                    self.sort_on, self.catalog))
+            else:
+                self.contentFilter['sort_on'] = self.sort_on
 
         # pagesize
         pagesize = self.request.get(form_id + '_pagesize', self.pagesize)
@@ -871,6 +876,7 @@ class BikaListingView(BrowserView):
                 # otherwise, self.contentsMethod must handle contentFilter
                 brains = self.contentsMethod(contentFilterTemp)
         else:
+            logger.debug("Bika Listing Table Query={}".format(contentFilterTemp))
             brains = self.contentsMethod(contentFilterTemp)
 
         # idx increases one unit each time an object is added to the 'items'
